--- a/style.css
+++ b/style.css
@@ -1,198 +1,220 @@
-*{
-    margin: 0px;
-    font-family: 'Work Sans';
-
-    
+* {
+  margin: 0px;
+  font-family: "Work Sans";
 }
 /* ------------------banner start-------------- */
-header{
-    margin: 0px;
-    background-image:url('images/banner/banner1.png') ;
-    height: 800px;
-    max-width: 100%;
-    
+header {
+  margin: 0px;
+  background-image: url("images/banner/banner1.png");
+  height: 800px;
+  max-width: 100%;
 }
-.paragraph{
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26px;
-    color: #444343;
-}
-
-.primary_btn{
-    font-family: 'Inter', sans-serif;
-    background-color: #F15B22;
-    width: 160px;
-    height: 56px;
-    padding: 16px 12px;
-    border: #fff;
-    border-radius: 5px;
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 24px;
-    color: #FFFFFF;
-}
-.secondary_btn{
-    font-family: 'Inter', sans-serif;
-    background-color: #FFFFFF;
-    width: 160px;
-    height: 56px;
-    padding: 16px 12px;
-    border: #fff;
-    border-radius: 5px;
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 24px;
-    color:#F15B22;
+.paragraph {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #444343;
 }
 
-
-
-.banner_details{
-    position: absolute;
-    width: 525px;
-    height: 228px;
-    left: 845px;
-    top: 216px;
-    text-align: right;
-    
+.primary_btn {
+  font-family: "Inter", sans-serif;
+  background-color: #f15b22;
+  width: 160px;
+  height: 56px;
+  padding: 16px 12px;
+  border: #fff;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  color: #ffffff;
 }
-.banner_details h1{
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 65px;
-    line-height: 76px;
-    
-}
-.banner_details p{
-   
-    margin-top: 24px;
-    margin-bottom: 32px;   
+.secondary_btn {
+  font-family: "Inter", sans-serif;
+  background-color: #ffffff;
+  width: 160px;
+  height: 56px;
+  padding: 16px 12px;
+  border: #fff;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  color: #f15b22;
 }
 
-
+.banner_details {
+  position: absolute;
+  width: 525px;
+  height: 228px;
+  left: 845px;
+  top: 216px;
+  text-align: right;
+}
+.banner_details h1 {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 65px;
+  line-height: 76px;
+}
+.banner_details p {
+  margin-top: 24px;
+  margin-bottom: 32px;
+}
 
 /* ---------------------main section start --------------------*/
-.container{
-    background-color: #ffffff;
-    margin: 130px 230px;
+.container {
+  background-color: #ffffff;
+  margin: 130px 230px;
 }
-.container_title{
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 47px;
+.container_title {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
 }
-.negative_performance{
-   
-    display: flex;
-    justify-content: space-between;
-    
+.negative_performance {
+  display: flex;
+  justify-content: space-between;
 }
-.negative_performance_img{
-  background-image: url('images/person.png');
+.negative_performance_img {
+  background-image: url("images/person.png");
   width: 569px;
   height: 723.3px;
 }
-.negative_performance_details{
-    width: 416px;
-    height: 400px;
-    margin-top: 30%;
-    text-align: start;
+.negative_performance_details {
+  width: 416px;
+  height: 400px;
+  margin-top: 30%;
+  text-align: start;
 }
-.negative_performance_details h1{
-   
-    color: #151414;
+.negative_performance_details h1 {
+  color: #151414;
 }
-.list_of_details{
-    list-style: none;
-    padding-left: 0px;
-    font-family: 'Work Sans';
+.list_of_details {
+  list-style: none;
+  padding-left: 0px;
+  font-family: "Work Sans";
 }
 ul.list_of_details li:before {
-    content:"\2713\0020";
-    color: #16d887;
-    font-size: 24px;
+  content: "\2713\0020";
+  color: #16d887;
+  font-size: 24px;
 }
 
-/*---------------------------------------------------- plan section */
+/*---------------------------------------------------- plan section---------------------------------- */
 
-.plan_details{
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+.plan_details {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
 }
-.plan_title{
-    margin-bottom: 55px;
-    text-align: center;
+.plan_title {
+  margin-bottom: 55px;
+  text-align: center;
 }
-.plan_head{
-font-family: 'Work Sans';
-font-style: normal;
-font-weight: 700;
-font-size: 27px;
-line-height: 35px;
-text-align: center;
+.plan_head {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 27px;
+  line-height: 35px;
+  text-align: center;
 }
-.plan_sub{
+.plan_sub {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 29px;
+  text-align: center;
+  color: #737272;
+}
+/* ---------------------------------------challanges section------------------------------------ */
+.challenges > h1 {
+  margin-bottom: 55px;
+  text-align: center;
+}
+.challenges > p {
+  text-align: justify;
+}
 
-font-style: normal;
-font-weight: 500;
-font-size: 22px;
-line-height: 29px;
-text-align: center;
-color: #737272;
+.challenges_details {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
 }
-/* ====================================cal now */
-.call_now{
-    background-image:  linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url("images/watch.png"); 
-    max-width: 100%;
-    height: 300px;
-    border-radius: 5px;
+.a_challenge {
+  background-color: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
 }
 
-.call_now_details{
-    padding: 60px 617px 60px 59px;
-    text-align: left;
+.a_challenge_img > img {
+  height: 50px;
+  width: 50px;
 }
-.call_now_details h1{
-    font-size: 40px;
-    color: #fff;
-    margin-bottom: 24px;
+.a_challenge_title {
+  margin-top: 25px;
+  margin-bottom: 20px;
 }
-/* =============================================footer =======================*/
-footer{
-    background-color: black;
-    color: #FFFFFF;
-    padding: 130px 230px;
-    display: flex;
-    justify-content: space-between;
-    gap: 330px;
+
+/* -----------------------------------------call now------------------------------------ */
+.call_now {
+  background-image: linear-gradient(
+      90deg,
+      #f15b22 0%,
+      rgba(241, 91, 34, 0) 100%
+    ),
+    url("images/watch.png");
+  max-width: 100%;
+  height: 300px;
+  border-radius: 5px;
 }
-footer p{
-    color: #FFFFFF !important;
-    margin-top: 16px;
+
+.call_now_details {
+  padding: 60px 617px 60px 59px;
+  text-align: left;
 }
-.footer_logo{
-margin-top: 32px;
-display: flex;
-justify-content: flex-start;
-gap: 17px;
+.call_now_details h1 {
+  font-size: 40px;
+  color: #fff;
+  margin-bottom: 24px;
 }
-.subscribe h2{
-    margin-bottom: 32px;
+/* -------------------------------------------footer ----------------------------------------*/
+footer {
+  background-color: black;
+  color: #ffffff;
+  padding: 130px 230px;
+  display: flex;
+  justify-content: space-between;
+  gap: 330px;
 }
-.subscribe input{
-    width: 146px;
-    height: 21px;
-    margin-bottom: 16px;
-    background: transparent;    
-    border: 1px solid #FFFFFF;
-    border-radius: 5px;
-    text-align: center;
-    padding: 22px 151px 22px 21px;
-    }
+footer p {
+  color: #ffffff !important;
+  margin-top: 16px;
+}
+.footer_logo {
+  margin-top: 32px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 17px;
+}
+.subscribe h2 {
+  margin-bottom: 32px;
+}
+.subscribe input {
+  width: 146px;
+  height: 21px;
+  margin-bottom: 16px;
+  background: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  text-align: center;
+  padding: 22px 151px 22px 21px;
+}
